# iPLAID

./: .dockerignore  .gitignore  CLAUDE.md  COLOR_PALETTE.md  Dockerfile  LICENSE.md  NOTICE.md  README.md  compose.yml  environment.yml  pyproject.toml
.github/: dependabot.yml
backend/: requirements.txt
config/: config.json  config.template.json
data/: echo_plate_specs.json  echo_source_plate_specs.json  echo_target_plate_specs.json  idot_target_plate_specs.json  solvent_default_caps.json  source_plate_specs.json  target_plate_types.json
docs/: colour_palette_guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
notebooks/: 01_plaid_idot_pipeline.ipynb  iPLAID.ipynb
scripts/: run_pipeline.py  start.sh  start_web_app.sh  stop.sh
tests/: conftest.py  test_api_runs.py  test_api_source_layout_preview.py  test_calculations.py  test_dispensers.py  test_dispensers_echo.py  test_dispensers_idot.py  test_download_filenames.py  test_imeta.py  test_io.py  test_layout_as_meta.py  test_loaders.py  test_normalization.py  test_normalization_increment.py  test_output.py  test_pipeline.py  test_pipeline_equivalence.py  test_pipeline_exclusion_cascade.py  test_pipeline_golden.py  test_pipeline_layout_as_meta.py  test_pipeline_source_summary.py  test_pipeline_target_plate_validator.py  test_pipeline_warnings_in_output.py  test_solvent_families.py  test_source_layout_preview.py  test_source_plate_import.py  test_source_plate_layout.py  test_source_plate_prep_echo.py  test_source_plate_prep_inmemory.py  test_validators.py  (+3 more)
(+149 files in other folders)
