[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iplaid"
version = "0.1.0"
description = "iPLAID — iDOT Protocol Layout & Assay Integration Dispatcher"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pydantic>=2.11,<3",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4,<5",
    "ipykernel>=6,<7",
]

[tool.setuptools.packages.find]
where = ["src"]
